--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body>
   	<%= render 'partials/navbar' %>
   	<div class="wrapper">
-  		<header class="container">
+  		<header class="container padding-top-l">
   			<div class="header-title">
   				<h1><%= @page_title || "Hi, I'm Lucas." %></h1>
   			</div>
