--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,9 @@
 <div class="container">
 	<div class="col s12">
 		<div class="introduce-my-self">
-			<h2 class="white-text">Hello Guys.</h2>
-			<h2 class="orange-text text-lighten-1">My name is Lucas Liu.</h2>
-			<h2 class="orange-text text-lighten-1">I'm a developer.</h2>
-			<p class="white-text">I love coding, traveling and learning new things.</p>
+			<h2 class="white-text">My name is Lucas Liu.</h2>
+			<h2 class="white-text">I'm a developer.</h2>
+			<p>I love coding, traveling and learning new things.</p>
 		</div>
 	</div>
 </div>
