--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="col s12">
 		<div class="introduce-my-self">
 			<h2 class="white-text">My name is Lucas Liu.</h2>
-			<h2 class="white-text">I'm a developer.</h2>
+			<h2 class="white-text">I'm a developer from Taiwan.</h2>
 			<p>I love coding, traveling and learning new things.</p>
 		</div>
 	</div>
