--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
 									<h4 class="article-item-title">
 										<%= link_to post.title, post_path(post) %>
 									</h4>
-									<p class="article-item-content margin-bottom-m"><%= post.content %></p>
+									<p class="article-item-content margin-bottom-m"><%= post.excerpt %></p>
 									<p class="article-item-link"><%= link_to 'View Post', post_path(post), class: 'btn' %></p>
 								</div>
 							</div>
