--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,6 +4,7 @@
 			<h2 class="white-text">My name is Lucas Liu.</h2>
 			<h2 class="white-text">I'm a developer from Taiwan.</h2>
 			<p>I love coding, traveling and learning new things.</p>
+			<%= link_to "Check My Articles", posts_path, class: 'btn' %>
 		</div>
 	</div>
 </div>
